--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -7,6 +7,8 @@
   border-radius: 12px;
   text-align: center;
   box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  justify-content: center;
+  display: flex;
 }
 
 .new-expense button {
@@ -17,7 +19,7 @@
   background-color: #40005d;
   color: white;
   border-radius: 12px;
-  margin-right: 1px;
+  margin-right: 10px;
 }
 
 .new-expense button:hover,
@@ -35,4 +37,14 @@
 .new-expense button.alternative:hover,
 .new-expense button.alternative:active {
   background-color: #ddb3f8;
+}
+.new-expense__mainbtn {
+  width: 10rem;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  background-color: #40005d;
+  border: 1px solid white;
+  padding: 0.5rem;
+  border-radius: 12px;
 }
